--- a/RN.ipynb
+++ b/RN.ipynb
@@ -35,14 +35,20 @@
     "* Os dados foram obtidos através da API da NBA, o script 'get_team_stats.py' obtém as médias estatísticas de todos os times após cada jogo da temporada regular das úlitmas 6 temporadas (2017-18 a 2022-23). Ele pode ser oncontrato em:\n",
     "\n",
     "    - (https://github.com/ArthurPatricio/Final_Project_Basketball_Game_Prediction/blob/main/get_team_stats.py)\n",
-    "    \n",
+    "<br/><br/>\n",
     "* O script 'get_games.py' obtém a lista de todos os jogos das últimas 6 temporadas regulares (2017-18 a 2022-23). Ele pode ser encontrado em:\n",
     "\n",
     "    - (https://github.com/ArthurPatricio/Final_Project_Basketball_Game_Prediction/blob/main/get_games.py)\n",
-    "\n",
+    "<br/><br/>\n",
     "* O script 'organize_data.py' tem os dados dados proveninetes dos 2 scripts anteriores e como suas entradas. Este script reorganiza os dados de forma que cada linha do dataframe seja única, contendo uma das partidas das últimas 6 temporadas regulares do conjunto. Colunas auxiliares foram craidas indicando o número do jogo dentro da temporada para cada time no confronto, por exemplo, um confronto pode uma partida entre de número 50 de um time A na temporada 2022-23 e a partida 48 de um time B que ele enfrenta neste confronto. \n",
     "\n",
-    "* Os dados também foram trbalhados de forma que foram associados a cada confronto as médias estatísticas dos times. A associação é feita da seguinte forma, para cada confronto cada time recebe as sua médias estatísticas até o momento daquele jogo. Expandindo no exemplo anterior, no confronto entre os times A e B, A irá jogar sua partida de número 50, então"
+    "* Os dados também foram trbalhados de forma que foram associados a cada confronto as médias estatísticas dos times. A associação é feita da seguinte forma, para cada confronto cada time recebe as sua médias estatísticas até o momento daquele jogo. Expandindo o exemplo anterior, no confronto entre os times A e B, A irá jogar sua partida de número 50, então chegara com as médias das 49 partidas anteriores a este jogo, já o time B, chegará com as médias das 47 partidas que já jogou na temporada. O script pode ser encontrado em:\n",
+    "\n",
+    "    - (https://github.com/ArthurPatricio/Final_Project_Basketball_Game_Prediction/blob/main/organize_data.py)\n",
+    "<br/><br/>\n",
+    "* O último script, 'final_data.py', realiza a mesclagem final dos dados, unindo os confrontos às médias estatísticas do par de times até aquele momento (jogo) da temporada. Os dados são salvos em planilha, chamada 'nba_data.xlsx'. Ele pode ser encontrado em:\n",
+    "\n",
+    "    - (https://github.com/ArthurPatricio/Final_Project_Basketball_Game_Prediction/blob/main/final_data.py)"
    ]
   },
   {
@@ -50,6 +56,13 @@
    "metadata": {},
    "source": [
     "# Linguagem, Bibliotecas e Pacotes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O trabalho foi feito todo em Python 3. Abaixo, segue a listagem de todas bibliotecas e pacotes utilizados:"
    ]
   },
   {
@@ -63,7 +76,7 @@
      "text": [
       "c:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "C:\\Users\\arthu\\AppData\\Local\\Temp\\ipykernel_48524\\2184817312.py:6: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
+      "C:\\Users\\arthu\\AppData\\Local\\Temp\\ipykernel_45104\\2184817312.py:6: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
       "  from pandas_profiling import ProfileReport\n"
      ]
     }
@@ -102,8 +115,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A planilha 'nba_data.xlsx' foi importada e inserida em um Dataframe utilizando a biblioteca pandas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,229 +133,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>HOME_TEAM_ID</th>\n",
-       "      <th>HOME_TEAM_ABBREVIATION</th>\n",
-       "      <th>HOME_GAME_ID</th>\n",
-       "      <th>HOME_MATCHUP</th>\n",
-       "      <th>HOME_SEASON</th>\n",
-       "      <th>HOME_GAME_N</th>\n",
-       "      <th>HOME_WL</th>\n",
-       "      <th>AWAY_TEAM_ID</th>\n",
-       "      <th>AWAY_TEAM_ABBREVIATION</th>\n",
-       "      <th>AWAY_GAME_ID</th>\n",
-       "      <th>...</th>\n",
-       "      <th>BLK_RANK_y</th>\n",
-       "      <th>BLKA_RANK_y</th>\n",
-       "      <th>PF_RANK_y</th>\n",
-       "      <th>PFD_RANK_y</th>\n",
-       "      <th>PTS_RANK_y</th>\n",
-       "      <th>PLUS_MINUS_RANK_y</th>\n",
-       "      <th>GAME_DATE_y</th>\n",
-       "      <th>SEASON_y</th>\n",
-       "      <th>GAME_N_y</th>\n",
-       "      <th>COMPARE_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1610612764</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>22200019</td>\n",
-       "      <td>WAS vs. CHI</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>2</td>\n",
-       "      <td>W</td>\n",
-       "      <td>1610612741</td>\n",
-       "      <td>CHI</td>\n",
-       "      <td>22200019</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2022-10-19-2022_23</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2-1610612741-2022-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>22200039</td>\n",
-       "      <td>CLE vs. WAS</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>3</td>\n",
-       "      <td>W</td>\n",
-       "      <td>1610612764</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>22200039</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>27</td>\n",
-       "      <td>18</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2022-10-21-2022_23</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3-1610612764-2022-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1610612764</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>22200052</td>\n",
-       "      <td>WAS vs. DET</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>4</td>\n",
-       "      <td>W</td>\n",
-       "      <td>1610612765</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>22200052</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28</td>\n",
-       "      <td>30</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>17</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2022-10-22-2022_23</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4-1610612765-2022-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1610612764</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>22200074</td>\n",
-       "      <td>WAS vs. IND</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>5</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1610612754</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>22200074</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>21</td>\n",
-       "      <td>23</td>\n",
-       "      <td>17</td>\n",
-       "      <td>11</td>\n",
-       "      <td>25</td>\n",
-       "      <td>2022-10-26-2022_23</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6-1610612754-2022-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1610612738</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>22200089</td>\n",
-       "      <td>BOS vs. WAS</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>6</td>\n",
-       "      <td>W</td>\n",
-       "      <td>1610612764</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>22200089</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>19</td>\n",
-       "      <td>23</td>\n",
-       "      <td>20</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2022-10-28-2022_23</td>\n",
-       "      <td>2022-23</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6-1610612764-2022-23</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 132 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   HOME_TEAM_ID HOME_TEAM_ABBREVIATION  HOME_GAME_ID HOME_MATCHUP HOME_SEASON  \\\n",
-       "0    1610612764                    WAS      22200019  WAS vs. CHI     2022-23   \n",
-       "1    1610612739                    CLE      22200039  CLE vs. WAS     2022-23   \n",
-       "2    1610612764                    WAS      22200052  WAS vs. DET     2022-23   \n",
-       "3    1610612764                    WAS      22200074  WAS vs. IND     2022-23   \n",
-       "4    1610612738                    BOS      22200089  BOS vs. WAS     2022-23   \n",
-       "\n",
-       "   HOME_GAME_N HOME_WL  AWAY_TEAM_ID AWAY_TEAM_ABBREVIATION  AWAY_GAME_ID  \\\n",
-       "0            2       W    1610612741                    CHI      22200019   \n",
-       "1            3       W    1610612764                    WAS      22200039   \n",
-       "2            4       W    1610612765                    DET      22200052   \n",
-       "3            5       L    1610612754                    IND      22200074   \n",
-       "4            6       W    1610612764                    WAS      22200089   \n",
-       "\n",
-       "   ... BLK_RANK_y BLKA_RANK_y  PF_RANK_y PFD_RANK_y PTS_RANK_y  \\\n",
-       "0  ...          6           2         25          8          8   \n",
-       "1  ...          2           7          7         27         18   \n",
-       "2  ...         28          30         10          7         17   \n",
-       "3  ...          3          21         23         17         11   \n",
-       "4  ...          5           7         19         23         20   \n",
-       "\n",
-       "  PLUS_MINUS_RANK_y         GAME_DATE_y SEASON_y  GAME_N_y  \\\n",
-       "0                 7  2022-10-19-2022_23  2022-23         2   \n",
-       "1                 9  2022-10-21-2022_23  2022-23         3   \n",
-       "2                27  2022-10-22-2022_23  2022-23         4   \n",
-       "3                25  2022-10-26-2022_23  2022-23         6   \n",
-       "4                11  2022-10-28-2022_23  2022-23         6   \n",
-       "\n",
-       "              COMPARE_y  \n",
-       "0  2-1610612741-2022-23  \n",
-       "1  3-1610612764-2022-23  \n",
-       "2  4-1610612765-2022-23  \n",
-       "3  6-1610612754-2022-23  \n",
-       "4  6-1610612764-2022-23  \n",
-       "\n",
-       "[5 rows x 132 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "O dataframe tem a coluna 'Unnamed: 0' retirada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Drop \"Unnamed: 0\" column\n",
     "\n",
-    "nba_data.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
-    "nba_data.head()"
+    "nba_data.drop(['Unnamed: 0'], axis=1, inplace=True)"
    ]
   },
   {
@@ -343,6 +155,13 @@
    "metadata": {},
    "source": [
     "# Análise Inicial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O dataset possui 6963 registros e 132 atributos."
    ]
   },
   {
@@ -369,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +204,7 @@
        "      dtype='object', length=132)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +506,7 @@
        "[8 rows x 114 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +531,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -754,8 +573,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "nba_data não possui nenhum valor faltante.\n",
+    "\n",
+    "Foi utilizado a biblioteca missingno para realizar a checagem."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +592,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -789,7 +617,7 @@
    "source": [
     "# Relatório Pandas Profile\n",
     "\n",
-    "    Foi gerado o 'Pandas Profile Report' que oferece uma análise extensa do conjunto de dados que está sendo abordado."
+    "Foi gerado o 'Pandas Profile Report' que oferece uma análise extensa do conjunto de dados que está sendo abordado."
    ]
   },
   {
@@ -823,8 +651,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Vitórias e Derrotas por Time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +675,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,8 +802,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primeiramente, foram plotadas as vitórias e derrotas dos 10 times com melhor performance em jogos em casa nas últimas 6 temporadas apenas para termos uma visualização inicial dos nossos dados. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
