--- a/RN.ipynb
+++ b/RN.ipynb
@@ -1409,39 +1409,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Redução de dimensão \n",
+    "* Redução de dimensão: Atributos categóricos que não contribuem para a previsão dos jogos foram retirados, a maioria categórica e redundante entre si, como por exemplo, atributos que trazem o nome e a abreviação dos times.\n",
     "\n",
-    "* Atributos categóricos que não contribuem para a previsão dos jogos foram retirados, a maioria categórica e redundante entre si, como por exemplo, atributos que trazem o nome e a abreviação dos times.\n",
+    "    - Segue abaixo a lista completa do 27 atributos retirados:\n",
     "\n",
-    "* Segue abaixo a lista completa do 27 atributos retirados:\n",
+    "        - 1.\tHOME_TEAM_ID\n",
+    "        - 2.\tHOME_TEAM_ABBREVIATION\n",
+    "        - 3.\tHOME_GAME_ID\n",
+    "        - 4.\tHOME_MATCHUP\n",
+    "        - 5.\tHOME_SEASON\n",
+    "        - 6.\tHOME_GAME_N\n",
+    "        - 7.\tAWAY_TEAM_ID\n",
+    "        - 8.\tAWAY_TEAM_ABBREVIATION\n",
+    "        - 9.\tAWAY_GAME_ID\n",
+    "        - 10.\tAWAY_MATCHUP\n",
+    "        - 11.\tAWAY_SEASON\n",
+    "        - 12.\tAWAY_GAME_N\n",
+    "        - 13.\tAWAY_WL\n",
+    "        - 14.\tHOME_COMPARE\n",
+    "        - 15.\tAWAY_COMPARE\n",
+    "        - 16.\tTEAM_ID_x\n",
+    "        - 17.\tTEAM_NAME_x\n",
+    "        - 18.\tGAME_DATE_x\n",
+    "        - 19.\tSEASON_x\n",
+    "        - 20.\tGAME_N_x\n",
+    "        - 21.\tCOMPARE_x\n",
+    "        - 22.\tTEAM_ID_y\n",
+    "        - 23.\tTEAM_NAME_y\n",
+    "        - 24.\tGAME_DATE_y\n",
+    "        - 25.\tSEASON_y\n",
+    "        - 26.\tGAME_N_y\n",
+    "        - 27.\tCOMPARE_y\n",
     "\n",
-    "1.\tHOME_TEAM_ID\n",
-    "2.\tHOME_TEAM_ABBREVIATION\n",
-    "3.\tHOME_GAME_ID\n",
-    "4.\tHOME_MATCHUP\n",
-    "5.\tHOME_SEASON\n",
-    "6.\tHOME_GAME_N\n",
-    "7.\tAWAY_TEAM_ID\n",
-    "8.\tAWAY_TEAM_ABBREVIATION\n",
-    "9.\tAWAY_GAME_ID\n",
-    "10.\tAWAY_MATCHUP\n",
-    "11.\tAWAY_SEASON\n",
-    "12.\tAWAY_GAME_N\n",
-    "13.\tAWAY_WL\n",
-    "14.\tHOME_COMPARE\n",
-    "15.\tAWAY_COMPARE\n",
-    "16.\tTEAM_ID_x\n",
-    "17.\tTEAM_NAME_x\n",
-    "18.\tGAME_DATE_x\n",
-    "19.\tSEASON_x\n",
-    "20.\tGAME_N_x\n",
-    "21.\tCOMPARE_x\n",
-    "22.\tTEAM_ID_y\n",
-    "23.\tTEAM_NAME_y\n",
-    "24.\tGAME_DATE_y\n",
-    "25.\tSEASON_y\n",
-    "26.\tGAME_N_y\n",
-    "27.\tCOMPARE_y\n"
+    "* Conversão categórico x numérico: Apos a redução de dimensionalidade, apenas um atributo categório permaneceu no conjunto de dados, o que indica o vencedor do confronto. Ele foi convertido de forma que o valor W (vitória) passa a ser 0 e L (derrota) passa a ser 1.\n",
+    "\n",
+    "* Divisão treino x teste: Os conjuntos de treino e teste foram criados com os seguintes parâmetros:\n",
+    "\n",
+    "    - Razão treino/teste igual a 0,3.\n",
+    "    - Random state igual a 100 para permitir reproducibilidade dos conjuntos de treino e teste.\n",
+    "    - Estratificação ativada para permitir uma divisão equilibrada entre os resultados do sub conjunto de dados escolhido.\n",
+    "\n",
+    "* Variância: Checagem de atributos com variância igual a zero. Nenhum atributo foi encontrado.\n",
+    "\n",
+    "* Normalização: Os dados das bases de Treino e Teste foram normalizados. É uma etapa fundamental pois o conjunto de dados possui atributos numéricos em ordens de grandeza diferentes, como por exmplo 'W_PCT_x' e 'FGA_x'. Esta diferença pode levar os modelos a uma menor eficiência."
    ]
   },
   {
@@ -1456,20 +1466,6 @@
     "                                  15,16,17,70,71,72,73,74,75,128,129,130,131]], axis=1, inplace=True)\n",
     "\n",
     "nba_data.to_excel('test_table.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conversão categórico x numérico"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Apos a redução de dimensionalidade, apenas um atributo categório permaneceu no conjunto de dados, o que indica o vencedor do confronto. Ele foi convertido de forma que o valor W (vitória) passa a ser 0 e L (derrota) passa a ser 1."
    ]
   },
   {
@@ -1682,24 +1678,6 @@
     "\n",
     "nba_data['HOME_WL'] = nba_data['HOME_WL'].apply(lambda x: 0 if x == 'W' else 1)\n",
     "nba_data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Divisão treino x teste"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Os conjuntos de treino e teste foram criados com os seguintes parâmetros:\n",
-    "\n",
-    "* Razão treino/teste igual a 0,3.\n",
-    "* Random state igual a 100 para permitir reproducibilidade dos conjuntos de treino e teste.\n",
-    "* Estratificação ativada para permitir uma divisão equilibrada entre os resultados do sub conjunto de dados escolhido."
    ]
   },
   {
