--- a/RN.ipynb
+++ b/RN.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "* O script 'organize_data.py' tem os dados dados proveninetes dos 2 scripts anteriores e como suas entradas. Este script reorganiza os dados de forma que cada linha do dataframe seja única, contendo uma das partidas das últimas 6 temporadas regulares do conjunto. Colunas auxiliares foram craidas indicando o número do jogo dentro da temporada para cada time no confronto, por exemplo, um confronto pode uma partida entre de número 50 de um time A na temporada 2022-23 e a partida 48 de um time B que ele enfrenta neste confronto. \n",
     "\n",
-    "* Os dados também foram trbalhados de forma que foram associados a cada confronto as médias estatísticas dos times. A associação é feita da seguinte forma, para cada confronto cada time recebe as sua médias estatísticas até o momento daquele jogo. Expandindo o exemplo anterior, no confronto entre os times A e B, A irá jogar sua partida de número 50, então chegara com as médias das 49 partidas anteriores a este jogo, já o time B, chegará com as médias das 47 partidas que já jogou na temporada. O script pode ser encontrado em:\n",
+    "* Os dados também foram trabalhados de forma que foram associados a cada confronto as médias estatísticas dos times. A associação é feita da seguinte forma, para cada confronto cada time recebe as sua médias estatísticas até o momento daquele jogo. Expandindo o exemplo anterior, no confronto entre os times A e B, A irá jogar sua partida de número 50, então chegara com as médias das 49 partidas anteriores a este jogo, já o time B, chegará com as médias das 47 partidas que já jogou na temporada. Foi inspirado no trabalho \"*Winners & Whiners*\" de J.Beatty, M. Ramesh, E.polley e A.Arocho. O script pode ser encontrado em: [1]\n",
     "\n",
     "    - (https://github.com/ArthurPatricio/Final_Project_Basketball_Game_Prediction/blob/main/organize_data.py)\n",
     "\n",
@@ -1124,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vale mencionar que Denver é o time que joga em maior elevação na liga, sua arena fica a 5280 acima do nível do mar. Apesar de não ser uma elevação tão considerável, seus efeitos são históricamente conhecidos como um ponto de vantagem para o time da cidade. [1] "
+    "Vale mencionar que Denver é o time que joga em maior elevação na liga, sua arena fica a 5280 acima do nível do mar. Apesar de não ser uma elevação tão considerável, seus efeitos são históricamente conhecidos como um ponto de vantagem para o time da cidade. [2] "
    ]
   },
   {
@@ -1196,13 +1196,13 @@
     "\n",
     "Os outros 3 gráficos possuem como eixo x as partidas jogadas em casa. O primeiro, nossa fonte de comparação, apresenta o rendimento do time através da média do percentual de vitórias na temporada até dada partida. O segundo, a média de lances livres tentados por partida na temporada até dada partida. Já o terceiro, a média da porcentagem de arremessos convertidos na temporada até dada partida. \n",
     "\n",
-    "Como pode-se notar, existe similaridade nas curvas. Tal fato corrobora o esperado, as duas estatísticas apresentadas são historicamente reconhecidas como bons medidores da capacidade de um time em vencer partidas. O lance livre, conhecido também como o arremesso mais fácil do esporte, é a forma mais garantida de pontuar-se no basquete, na temporada 2022-23 por exemplo, a média da liga foi de 78,2% de acerto. Em contra partida, a média para arremesso (cestas) certas ficou em 47,5%. De forma geral, são considerados bons números, que costumam indicar boas chances de vitórias, a partir de 80% para lances livres e 50% para arremessos. [2]\n",
+    "Como pode-se notar, existe similaridade nas curvas. Tal fato corrobora o esperado, as duas estatísticas apresentadas são historicamente reconhecidas como bons medidores da capacidade de um time em vencer partidas. O lance livre, conhecido também como o arremesso mais fácil do esporte, é a forma mais garantida de pontuar-se no basquete, na temporada 2022-23 por exemplo, a média da liga foi de 78,2% de acerto. Em contra partida, a média para arremesso (cestas) certas ficou em 47,5%. De forma geral, são considerados bons números, que costumam indicar boas chances de vitórias, a partir de 80% para lances livres e 50% para arremessos. [3]\n",
     "\n",
-    "Na temporada 2022-23, Denver terminou com 75,1% para lances livres, sendo a quinta pior média entre todos os times e 50.4% para arremessos, a melhor marca da liga. Entretando, os Nuggets terminam a temporada regular com apenas a quarta posição no ranking geral. Para nos contextualizarmos melhor, vale uma breve explicação de como a temporada regular da NBA opera. [3]\n",
+    "Na temporada 2022-23, Denver terminou com 75,1% para lances livres, sendo a quinta pior média entre todos os times e 50.4% para arremessos, a melhor marca da liga. Entretando, os Nuggets terminam a temporada regular com apenas a quarta posição no ranking geral. Para nos contextualizarmos melhor, vale uma breve explicação de como a temporada regular da NBA opera. [4]\n",
     "\n",
     "De forma simplificada, temos 30 times que são dividios em 2 grupos (conferências) de 15 times cada, os 8 clubes com melhor ranking dentro de cada conferência se classificam para a pós-temporada, que funciona como um torneiro mata-mata, assim como a segunda fase de uma Copa do Mundo de futebol.\n",
     "\n",
-    "Denver joga na conferência Oeste, os 3 times que terminaram a sua frente jogam na leste. Denver termina a temproada regular liderando a sua conferência, se classificando em primeiro para os playoffs. Se analizarmos o recorte de meio de temporada, Denver chega ao ponto médio com a melhor campanha de sua conferência, com 6 vitórias a mais que o segundo colocado, grande vantagem para a NBA. Já na segunda metade, tem apenas a oitava melhor campanha dentro da conferência. Olhando para a liga como um todo, na primeira metade, termina em terceiro geral, com apenas uma vitória atrás dos líderes, na segunda metade, possui apenas a décima quinta melhor campanha. [4]\n",
+    "Denver joga na conferência Oeste, os 3 times que terminaram a sua frente jogam na leste. Denver termina a temproada regular liderando a sua conferência, se classificando em primeiro para os playoffs. Se analizarmos o recorte de meio de temporada, Denver chega ao ponto médio com a melhor campanha de sua conferência, com 6 vitórias a mais que o segundo colocado, grande vantagem para a NBA. Já na segunda metade, tem apenas a oitava melhor campanha dentro da conferência. Olhando para a liga como um todo, na primeira metade, termina em terceiro geral, com apenas uma vitória atrás dos líderes, na segunda metade, possui apenas a décima quinta melhor campanha. [5]\n",
     "\n",
     "Logo percebe-se que a queda de rendimento dos Nuggets ao fim da temporada, perceptível nos gráfico foi resultado de uma escolha do clube em poupar seus atletas, a fim chegar na pós temporada com o time o mais descansado e saudável possível, depois que notou-se que o primeiro lugar na conferência muito dificilmente seria perdido. "
    ]
@@ -2540,15 +2540,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Após avaliação dos resultados obtidos com a rede neural criada neste trabalho, ficou claro que o desafio de criar um modelo que performe bem e consistentemente para prever o resultado de partidas da NBA é grande. Estamos lidando com um problema de complexiade muito elevada, um jogo de basquete possuí vários atributos, muitos deles são traduzidos em números e utilizados como métricas, os que nos utilizamos neste trabalho são exemplos. Porém, o jogo possui outros fatores mais difíceis de medir-se, como por exemplo o estado físico dos jogadores durante as partidas e outros até que não é possível medirmos, como o estado mental dos atletas. A diferença de uma cesta que entra ou não pode estar uma pequena variação do humor ou no nível de confiança do arremessador, estas alterações alteram a mecânica de um arremesso. A somatória de fatores assim, ao longo de um contronto, fazem muita diferença.\n",
+    "\n",
+    "Outro ponto interessante é sobre os dados escolhidos para serem os *inputs* da nossa rede. O conjunto continha as médias das principais estatísticas de um time até o momento de uma dada partida. Apesar da escolha de organizar os dados desta forma aparentar ter sido acertada, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# REFERÊNCIAS\n",
     "\n",
-    "1 https://english.elpais.com/sports/2023-06-03/mile-high-nba-advantage-denver-altitude-helps-nuggets-go-unbeaten-at-home-in-playoffs.html\n",
+    "1 https://devpost.com/software/applying-deep-learning-techniques-to-nba-predictions#updates\n",
     "\n",
-    "2 https://www.basketball-reference.com/leagues/NBA_stats_per_game.html\n",
+    "2 https://english.elpais.com/sports/2023-06-03/mile-high-nba-advantage-denver-altitude-helps-nuggets-go-unbeaten-at-home-in-playoffs.html\n",
     "\n",
-    "3 https://www.nba.com/stats/teams/traditional\n",
+    "3 https://www.basketball-reference.com/leagues/NBA_stats_per_game.html\n",
     "\n",
-    "4 https://www.nba.com/stats/teams/traditional?Conference=West&SeasonSegment=Pre+All-Star"
+    "4 https://www.nba.com/stats/teams/traditional\n",
+    "\n",
+    "5 https://www.nba.com/stats/teams/traditional?Conference=West&SeasonSegment=Pre+All-Star"
    ]
   }
  ],
