--- a/RN.ipynb
+++ b/RN.ipynb
@@ -2580,9 +2580,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# REFERÊNCIAS\n",
+    "# Referências\n",
     "\n",
-    "[1] J.Beatty. M. Ramesh. E.polley. A.Arocho. Winners and Whinners https://devpost.com/software/applying-deep-learning-techniques-to-nba-predictions#updates, 2021.\n",
+    "[1] J.Beatty. M. Ramesh. E.polley. A.Arocho. Winners and Whinners. https://devpost.com/software/applying-deep-learning-techniques-to-nba-predictions#updates, 2021.\n",
     "\n",
     "[2] Mile-High NBA advantage: Denver altitude helps Nuggets go unbeaten at home in playoffs. https://english.elpais.com/sports/2023-06-03/mile-high-nba-advantage-denver-altitude-helps-nuggets-go-unbeaten-at-home-in-playoffs.html, 2023.\n",
     "\n",
